[gd_scene load_steps=5 format=3 uid="uid://mbtu0gx6lkn4"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_vxck2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujyfe"]
bg_color = Color(0.329412, 0.180392, 0.180392, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
anti_aliasing = false

[sub_resource type="CircleShape2D" id="CircleShape2D_t2vqs"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kui1y"]
radius = 64.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_vxck2")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ujyfe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t2vqs")

[node name="VisionCone" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionCone"]
polygon = PackedVector2Array(-16, 0, 16, 0, 192, -192, 96, -240, 0, -256, -96, -240, -192, -192)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionCone"]
shape = SubResource("CircleShape2D_kui1y")

[connection signal="body_entered" from="VisionCone" to="." method="_on_vision_cone_entered"]
[connection signal="body_exited" from="VisionCone" to="." method="_on_vision_cone_exited"]
